fix: correct CSS selectors for list and footer alignment in 19-style.css

--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -164,9 +164,9 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--nav-item-link-hover);
 }
 
-.ul .row {
+.ul.row {
     margin: 0;
-    padding: none;
+    padding: 0;
     list-style: none;
 }
 
@@ -188,6 +188,6 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--text-color);
 }
 
-.ul .footer {
+.footer ul {
     text-align: right;
 }
